--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
   <body>
     <header>
       <!-- 1st Rule of ARIA: using native HTML elements -->
-      <!-- .skip was previous in body, not a native HTML element/landmark -->
+      <!-- .skip was previously in body, not a native HTML element/landmark -->
+      <!-- header, main, nav are examples of landmarks -->
       <div class="skip"><a href="">Skip to Main Content</a></div>
       <nav>
           <ul>
