added id for nav bar links

--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
       <!-- 1st Rule of ARIA: using native HTML elements -->
       <!-- .skip was previously in body, not a native HTML element/landmark -->
       <!-- header, main, nav are examples of landmarks -->
-      <div class="skip"><a href="">Skip to Main Content</a></div>
+      <div class="skip"><a href="main">Skip to Main Content</a></div>
       <nav>
           <ul>
-            <li><a href="">About</a></li>
-            <li><a href="">Method</a></li>
-            <li><a href="">Clients</a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#method">Method</a></li>
+            <li><a href="#clients">Clients</a></li>
+            <li><a href="#contact">Contact</a></li>
           </ul>
         </nav>
     </header>
