--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- 1st Rule of ARIA: using native HTML elements -->
       <!-- .skip was previously in body, not a native HTML element/landmark -->
       <!-- header, main, nav are examples of landmarks -->
-      <div class="skip"><a href="main">Skip to Main Content</a></div>
+      <div class="skip"><a href="#main">Skip to Main Content</a></div>
       <nav>
           <ul>
             <li><a href="#about">About</a></li>
