--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" type="image/png" href="images/logo-drk.png" />
+    <link rel="icon" type="image/png" href="images/logo-drk.png">
     <link rel="stylesheet" type="text/css" href="css/html5reset.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
     <title>Newer Company Inc.</title>
@@ -31,7 +31,7 @@
       </div>
 
       <div class="about-image" id="about">
-        <img src="images/about.jpg" alt="About Page"/>
+        <img src="images/about.jpg" alt="About Page">
       </div>
       
       <div class="about text-block" tabindex = "0">
@@ -40,7 +40,7 @@
       </div>
 
       <div class="method-image" id="method">
-        <img src="images/method.jpg" alt="Method Page"/>
+        <img src="images/method.jpg" alt="Method Page">
       </div>
 
       <div class="method text-block" tabindex = "0">
@@ -50,7 +50,7 @@
       </div>
 
       <div class="clients-image" id="clients">
-        <img src="images/clients.jpg" alt="Client Page"/>
+        <img src="images/clients.jpg" alt="Client Page">
       </div>
 
       <div class="clients text-block" tabindex = "0">
@@ -59,7 +59,7 @@
       </div>
 
       <div class="contact-image" id="contact">
-        <img src="images/contact.jpg" alt ="Contact Page"/>
+        <img src="images/contact.jpg" alt ="Contact Page">
       </div>
 
       <div class="contact text-block" tabindex = "0">
@@ -68,7 +68,7 @@
       </div>
   </main>
     <footer>
-      <p>University of Michigan School of Information <br/>
+      <p>University of Michigan School of Information<br>
         &copy; Colleen van Lent, Drew Asselin - Web Design 2019-2020</p>
     </footer>
   </body>
